--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gestão-mercado-coruja-pos",
+  "name": "mercado-coruja-pos-1-version",
   "private": true,
   "version": "0.0.0",
   "type": "module",
