feat: Improve PWA and app branding
This commit updates the application to a Progressive Web App (PWA) by adding a manifest file and a service worker for offline caching. It also refactors the UI for a more modern look and feel, improves sidebar functionality, and updates the project's branding and metadata to reflect the "v2" version.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mercado-coruja-pos-1-version",
+  "name": "mercado-coruja-pos-v2",
   "private": true,
   "version": "0.0.0",
   "type": "module",
