--- a/manifest.json
+++ b/manifest.json
@@ -4,12 +4,12 @@
   "name": "Mercado Coruja - Gestão & PDV",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/3594/3594363.png",
+      "src": "https://cdn-icons-png.flaticon.com/512/952/952763.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/3594/3594363.png",
+      "src": "https://cdn-icons-png.flaticon.com/512/952/952763.png",
       "sizes": "512x512",
       "type": "image/png"
     }
