--- a/manifest.json
+++ b/manifest.json
@@ -4,14 +4,16 @@
   "name": "Mercado Coruja - Gestão & PDV",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/952/952763.png",
+      "src": "https://i.ibb.co/yY1c3Tj/coruja-mercado-logo.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/952/952763.png",
+      "src": "https://i.ibb.co/yY1c3Tj/coruja-mercado-logo.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ],
   "start_url": ".",
